# trace32-python

./: .gitignore  MANIFEST.in  README.md  __init__.py  _trace32.py  pyproject.toml
capi/: readme.txt
capi/dll/: makefile  makefile.macosx  t32api.dylib  t32api.exp  t32api.lib  t32api64.exp  t32api64.lib
capi/src/: hlinknet.c  hremote.c  t32.h
capi/test/: makefile  readme.txt  t32apicmd.c  t32apidllmenu.c  t32apinotify.c  t32bundle.c  t32fdxhost.c  t32notifications.c  t32rem.c  t32remotedo.c  t32remtest.c
src/trace32/: __init__.py  _trace32.py  _trace32_ex.py  errors.py
